--- a/2.train_model/train_single_class_models.ipynb
+++ b/2.train_model/train_single_class_models.ipynb
@@ -26,7 +26,8 @@
     "\n",
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
-    "from train_utils import get_dataset, get_X_y_data"
+    "from train_utils import get_dataset, get_X_y_data\n",
+    "from evaluate_utils import get_SCM_model_data"
    ]
   },
   {
@@ -975,34 +976,11 @@
     "        f\"Training {model_type} model on {feature_type} features for {phenotypic_class} phenotypic class with {phenotypic_class_counts} positive labels...\"\n",
     "    )\n",
     "\n",
-    "    # create deep copy of training data so we can make modifications without affecting original training data\n",
-    "    class_training_data = training_data.copy(deep=True)\n",
-    "    # convert labels that are not phenotypic class to 0 (negative)\n",
-    "    class_training_data.loc[\n",
-    "        class_training_data[\"Mitocheck_Phenotypic_Class\"] != phenotypic_class,\n",
-    "        \"Mitocheck_Phenotypic_Class\",\n",
-    "    ] = f\"Not {phenotypic_class}\"\n",
-    "    \n",
     "    # because the label balance is so great for some classes (ex: 50 positive labels to 2400 negative labels),\n",
     "    # it is nessary to undersample negative labels\n",
-    "    # the following code completes the undersampling\n",
-    "    # first, get indexes of all positive labels (labels that are the desired phenotypic class) \n",
-    "    positive_label_indexes = (\n",
-    "        training_data.loc[\n",
-    "            training_data[\"Mitocheck_Phenotypic_Class\"] == phenotypic_class\n",
-    "        ]\n",
-    "    ).index\n",
-    "    # next, get the same number of negative labels (labels that are not the desired phenotypic class) \n",
-    "    negative_label_indexes = (\n",
-    "        training_data.loc[\n",
-    "            training_data[\"Mitocheck_Phenotypic_Class\"] != phenotypic_class\n",
-    "        ]\n",
-    "    ).sample(phenotypic_class_counts, random_state=0).index\n",
-    "    # the new class training data are the two subsets found above\n",
-    "    # this new class training data will have equal numbers of positive and negative labels\n",
-    "    # this removes the drastic class imbalances\n",
-    "    class_training_data = class_training_data.loc[positive_label_indexes.union(negative_label_indexes)]\n",
-    "\n",
+    "    # the function used below undersamples negative labels to get an even split of positive and negative labels\n",
+    "    class_training_data = get_SCM_model_data(training_data, phenotypic_class, \"train\")\n",
+    "    \n",
     "    # get X (features) and y (labels) data\n",
     "    X, y = get_X_y_data(class_training_data, feature_type)\n",
     "    print(f\"X has shape {X.shape}, y has shape {y.shape}\")\n",
@@ -1050,7 +1028,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
