--- a/3.evaluate_model/get_model_predictions.ipynb
+++ b/3.evaluate_model/get_model_predictions.ipynb
@@ -643,8 +643,8 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>cec7234f-fe35-4411-aded-f8112bb31219</td>\n",
-       "      <td>Not Large</td>\n",
-       "      <td>Not Large</td>\n",
+       "      <td>Large Negative</td>\n",
+       "      <td>Large Negative</td>\n",
        "      <td>train</td>\n",
        "      <td>False</td>\n",
        "      <td>CP</td>\n",
@@ -652,8 +652,8 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>43d9e7c9-c9ec-45ce-8820-048bfb896989</td>\n",
-       "      <td>Not Large</td>\n",
-       "      <td>Not Large</td>\n",
+       "      <td>Large Negative</td>\n",
+       "      <td>Large Negative</td>\n",
        "      <td>train</td>\n",
        "      <td>False</td>\n",
        "      <td>CP</td>\n",
@@ -679,7 +679,7 @@
        "    <tr>\n",
        "      <th>291919</th>\n",
        "      <td>380728fc-28b0-423f-b8a7-07be1af590d9</td>\n",
-       "      <td>Not OutOfFocus</td>\n",
+       "      <td>OutOfFocus Negative</td>\n",
        "      <td>OutOfFocus</td>\n",
        "      <td>test</td>\n",
        "      <td>True</td>\n",
@@ -688,8 +688,8 @@
        "    <tr>\n",
        "      <th>291920</th>\n",
        "      <td>30ed67c7-8de2-4d78-bce9-3fa1aff28565</td>\n",
-       "      <td>Not OutOfFocus</td>\n",
-       "      <td>Not OutOfFocus</td>\n",
+       "      <td>OutOfFocus Negative</td>\n",
+       "      <td>OutOfFocus Negative</td>\n",
        "      <td>test</td>\n",
        "      <td>True</td>\n",
        "      <td>CP_and_DP</td>\n",
@@ -697,7 +697,7 @@
        "    <tr>\n",
        "      <th>291921</th>\n",
        "      <td>2960b13e-6090-4592-b2a9-d1c4c1b24b50</td>\n",
-       "      <td>Not OutOfFocus</td>\n",
+       "      <td>OutOfFocus Negative</td>\n",
        "      <td>OutOfFocus</td>\n",
        "      <td>test</td>\n",
        "      <td>True</td>\n",
@@ -707,7 +707,7 @@
        "      <th>291922</th>\n",
        "      <td>fbc9ce6a-2b29-4115-b218-4ee5b8c50ac1</td>\n",
        "      <td>OutOfFocus</td>\n",
-       "      <td>Not OutOfFocus</td>\n",
+       "      <td>OutOfFocus Negative</td>\n",
        "      <td>test</td>\n",
        "      <td>True</td>\n",
        "      <td>CP_and_DP</td>\n",
@@ -716,7 +716,7 @@
        "      <th>291923</th>\n",
        "      <td>2ef448b0-cc39-4d00-bf1c-31115bc5a9f3</td>\n",
        "      <td>OutOfFocus</td>\n",
-       "      <td>Not OutOfFocus</td>\n",
+       "      <td>OutOfFocus Negative</td>\n",
        "      <td>test</td>\n",
        "      <td>True</td>\n",
        "      <td>CP_and_DP</td>\n",
@@ -730,28 +730,28 @@
        "                                   Cell_UUID Phenotypic_Class_Predicted  \\\n",
        "0       21da27ab-873a-41f4-ab98-49170cae9a2d                      Large   \n",
        "1       82f7949b-4ea2-45c8-8dd9-7854caf49077                      Large   \n",
-       "2       cec7234f-fe35-4411-aded-f8112bb31219                  Not Large   \n",
-       "3       43d9e7c9-c9ec-45ce-8820-048bfb896989                  Not Large   \n",
+       "2       cec7234f-fe35-4411-aded-f8112bb31219             Large Negative   \n",
+       "3       43d9e7c9-c9ec-45ce-8820-048bfb896989             Large Negative   \n",
        "4       63ce6652-338e-4afd-9c77-dbc0e903bf92                      Large   \n",
        "...                                      ...                        ...   \n",
-       "291919  380728fc-28b0-423f-b8a7-07be1af590d9             Not OutOfFocus   \n",
-       "291920  30ed67c7-8de2-4d78-bce9-3fa1aff28565             Not OutOfFocus   \n",
-       "291921  2960b13e-6090-4592-b2a9-d1c4c1b24b50             Not OutOfFocus   \n",
+       "291919  380728fc-28b0-423f-b8a7-07be1af590d9        OutOfFocus Negative   \n",
+       "291920  30ed67c7-8de2-4d78-bce9-3fa1aff28565        OutOfFocus Negative   \n",
+       "291921  2960b13e-6090-4592-b2a9-d1c4c1b24b50        OutOfFocus Negative   \n",
        "291922  fbc9ce6a-2b29-4115-b218-4ee5b8c50ac1                 OutOfFocus   \n",
        "291923  2ef448b0-cc39-4d00-bf1c-31115bc5a9f3                 OutOfFocus   \n",
        "\n",
        "       Phenotypic_Class_True data_split  shuffled feature_type  \n",
        "0                      Large      train     False           CP  \n",
        "1                      Large      train     False           CP  \n",
-       "2                  Not Large      train     False           CP  \n",
-       "3                  Not Large      train     False           CP  \n",
+       "2             Large Negative      train     False           CP  \n",
+       "3             Large Negative      train     False           CP  \n",
        "4                      Large      train     False           CP  \n",
        "...                      ...        ...       ...          ...  \n",
        "291919            OutOfFocus       test      True    CP_and_DP  \n",
-       "291920        Not OutOfFocus       test      True    CP_and_DP  \n",
+       "291920   OutOfFocus Negative       test      True    CP_and_DP  \n",
        "291921            OutOfFocus       test      True    CP_and_DP  \n",
-       "291922        Not OutOfFocus       test      True    CP_and_DP  \n",
-       "291923        Not OutOfFocus       test      True    CP_and_DP  \n",
+       "291922   OutOfFocus Negative       test      True    CP_and_DP  \n",
+       "291923   OutOfFocus Negative       test      True    CP_and_DP  \n",
        "\n",
        "[291924 rows x 6 columns]"
       ]
@@ -795,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
