--- a/3.evaluate_model/get_LOIO_probabilities.ipynb
+++ b/3.evaluate_model/get_LOIO_probabilities.ipynb
@@ -871,19 +871,7 @@
        "      <th>0</th>\n",
        "      <td>0008551d-e7f6-4351-b680-140c3661cb59</td>\n",
        "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
-       "      <td>Not ADCCM</td>\n",
-       "      <td>CP</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>ADCCM</td>\n",
-       "      <td>Negative_Label</td>\n",
-       "      <td>0.632704</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0008551d-e7f6-4351-b680-140c3661cb59</td>\n",
-       "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
-       "      <td>Not ADCCM</td>\n",
+       "      <td>ADCCM Negative</td>\n",
        "      <td>CP</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.2</td>\n",
@@ -892,22 +880,22 @@
        "      <td>0.367296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0008551d-e7f6-4351-b680-140c3661cb59</td>\n",
+       "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
+       "      <td>ADCCM Negative</td>\n",
+       "      <td>CP</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>ADCCM</td>\n",
+       "      <td>OutOfFocus Negative</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0008551d-e7f6-4351-b680-140c3661cb59</td>\n",
        "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
-       "      <td>Not Anaphase</td>\n",
-       "      <td>CP</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Anaphase</td>\n",
-       "      <td>Negative_Label</td>\n",
-       "      <td>0.050776</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0008551d-e7f6-4351-b680-140c3661cb59</td>\n",
-       "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
-       "      <td>Not Anaphase</td>\n",
+       "      <td>Anaphase Negative</td>\n",
        "      <td>CP</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.0</td>\n",
@@ -916,16 +904,28 @@
        "      <td>0.949224</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0008551d-e7f6-4351-b680-140c3661cb59</td>\n",
+       "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
+       "      <td>Anaphase Negative</td>\n",
+       "      <td>CP</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Anaphase</td>\n",
+       "      <td>OutOfFocus Negative</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0008551d-e7f6-4351-b680-140c3661cb59</td>\n",
        "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
-       "      <td>Not Apoptosis</td>\n",
+       "      <td>Apoptosis Negative</td>\n",
        "      <td>CP</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.1</td>\n",
        "      <td>Apoptosis</td>\n",
-       "      <td>Negative_Label</td>\n",
-       "      <td>0.040573</td>\n",
+       "      <td>Positive_Label</td>\n",
+       "      <td>0.959427</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -943,28 +943,16 @@
        "      <th>257575</th>\n",
        "      <td>fffe7b67-9876-4ef0-9848-046506e8f238</td>\n",
        "      <td>LT0035_06/LT0035_06_274_21.tif</td>\n",
-       "      <td>Not Polylobed</td>\n",
+       "      <td>Polylobed Negative</td>\n",
        "      <td>DP</td>\n",
        "      <td>0.10</td>\n",
        "      <td>0.4</td>\n",
        "      <td>Polylobed</td>\n",
-       "      <td>Positive_Label</td>\n",
-       "      <td>0.009446</td>\n",
+       "      <td>OutOfFocus Negative</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>257576</th>\n",
-       "      <td>fffe7b67-9876-4ef0-9848-046506e8f238</td>\n",
-       "      <td>LT0035_06/LT0035_06_274_21.tif</td>\n",
-       "      <td>Prometaphase</td>\n",
-       "      <td>DP</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Prometaphase</td>\n",
-       "      <td>Negative_Label</td>\n",
-       "      <td>0.006064</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>257577</th>\n",
        "      <td>fffe7b67-9876-4ef0-9848-046506e8f238</td>\n",
        "      <td>LT0035_06/LT0035_06_274_21.tif</td>\n",
        "      <td>Prometaphase</td>\n",
@@ -976,28 +964,40 @@
        "      <td>0.993936</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>257577</th>\n",
+       "      <td>fffe7b67-9876-4ef0-9848-046506e8f238</td>\n",
+       "      <td>LT0035_06/LT0035_06_274_21.tif</td>\n",
+       "      <td>Prometaphase</td>\n",
+       "      <td>DP</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Prometaphase</td>\n",
+       "      <td>OutOfFocus Negative</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>257578</th>\n",
        "      <td>fffe7b67-9876-4ef0-9848-046506e8f238</td>\n",
        "      <td>LT0035_06/LT0035_06_274_21.tif</td>\n",
-       "      <td>Not SmallIrregular</td>\n",
-       "      <td>DP</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>SmallIrregular</td>\n",
-       "      <td>Negative_Label</td>\n",
-       "      <td>0.894426</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>257579</th>\n",
-       "      <td>fffe7b67-9876-4ef0-9848-046506e8f238</td>\n",
-       "      <td>LT0035_06/LT0035_06_274_21.tif</td>\n",
-       "      <td>Not SmallIrregular</td>\n",
+       "      <td>SmallIrregular Negative</td>\n",
        "      <td>DP</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.2</td>\n",
        "      <td>SmallIrregular</td>\n",
        "      <td>Positive_Label</td>\n",
        "      <td>0.105574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257579</th>\n",
+       "      <td>fffe7b67-9876-4ef0-9848-046506e8f238</td>\n",
+       "      <td>LT0035_06/LT0035_06_274_21.tif</td>\n",
+       "      <td>SmallIrregular Negative</td>\n",
+       "      <td>DP</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>SmallIrregular</td>\n",
+       "      <td>OutOfFocus Negative</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1019,30 +1019,30 @@
        "257579  fffe7b67-9876-4ef0-9848-046506e8f238  LT0035_06/LT0035_06_274_21.tif   \n",
        "\n",
        "       Mitocheck_Phenotypic_Class Model_Feature_Type  Model_C  Model_l1_ratio  \\\n",
-       "0                       Not ADCCM                 CP     0.01             0.2   \n",
-       "1                       Not ADCCM                 CP     0.01             0.2   \n",
-       "2                    Not Anaphase                 CP     0.01             0.0   \n",
-       "3                    Not Anaphase                 CP     0.01             0.0   \n",
-       "4                   Not Apoptosis                 CP     0.01             0.1   \n",
+       "0                  ADCCM Negative                 CP     0.01             0.2   \n",
+       "1                  ADCCM Negative                 CP     0.01             0.2   \n",
+       "2               Anaphase Negative                 CP     0.01             0.0   \n",
+       "3               Anaphase Negative                 CP     0.01             0.0   \n",
+       "4              Apoptosis Negative                 CP     0.01             0.1   \n",
        "...                           ...                ...      ...             ...   \n",
-       "257575              Not Polylobed                 DP     0.10             0.4   \n",
+       "257575         Polylobed Negative                 DP     0.10             0.4   \n",
        "257576               Prometaphase                 DP     0.01             0.0   \n",
        "257577               Prometaphase                 DP     0.01             0.0   \n",
-       "257578         Not SmallIrregular                 DP     0.01             0.2   \n",
-       "257579         Not SmallIrregular                 DP     0.01             0.2   \n",
+       "257578    SmallIrregular Negative                 DP     0.01             0.2   \n",
+       "257579    SmallIrregular Negative                 DP     0.01             0.2   \n",
        "\n",
-       "       Model_Phenotypic_Class Predicted_Label  Predicted_Probability  \n",
-       "0                       ADCCM  Negative_Label               0.632704  \n",
-       "1                       ADCCM  Positive_Label               0.367296  \n",
-       "2                    Anaphase  Negative_Label               0.050776  \n",
-       "3                    Anaphase  Positive_Label               0.949224  \n",
-       "4                   Apoptosis  Negative_Label               0.040573  \n",
-       "...                       ...             ...                    ...  \n",
-       "257575              Polylobed  Positive_Label               0.009446  \n",
-       "257576           Prometaphase  Negative_Label               0.006064  \n",
-       "257577           Prometaphase  Positive_Label               0.993936  \n",
-       "257578         SmallIrregular  Negative_Label               0.894426  \n",
-       "257579         SmallIrregular  Positive_Label               0.105574  \n",
+       "       Model_Phenotypic_Class      Predicted_Label  Predicted_Probability  \n",
+       "0                       ADCCM       Positive_Label               0.367296  \n",
+       "1                       ADCCM  OutOfFocus Negative                    NaN  \n",
+       "2                    Anaphase       Positive_Label               0.949224  \n",
+       "3                    Anaphase  OutOfFocus Negative                    NaN  \n",
+       "4                   Apoptosis       Positive_Label               0.959427  \n",
+       "...                       ...                  ...                    ...  \n",
+       "257575              Polylobed  OutOfFocus Negative                    NaN  \n",
+       "257576           Prometaphase       Positive_Label               0.993936  \n",
+       "257577           Prometaphase  OutOfFocus Negative                    NaN  \n",
+       "257578         SmallIrregular       Positive_Label               0.105574  \n",
+       "257579         SmallIrregular  OutOfFocus Negative                    NaN  \n",
        "\n",
        "[257580 rows x 9 columns]"
       ]
@@ -1102,7 +1102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
