--- a/0.download_data/download_data.ipynb
+++ b/0.download_data/download_data.ipynb
@@ -30,8 +30,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labeled_data_hash = \"639e3db8e5b828f4f24f2d0817f94dafd6a7096e\"\n",
-    "labeled_data_url = f\"https://raw.github.com/WayScience/mitocheck_data/{labeled_data_hash}/3.normalize_data/normalized_data/training_data.csv.gz\""
+    "# labeled_data_hash = \"639e3db8e5b828f4f24f2d0817f94dafd6a7096e\"\n",
+    "# labeled_data_url = f\"https://raw.github.com/WayScience/mitocheck_data/{labeled_data_hash}/3.normalize_data/normalized_data/training_data.csv.gz\"\n",
+    "labeled_data_url = f\"https://github.com/roshankern/mitocheck_data/blob/remove-unused-cp-features/3.normalize_data/normalized_data/training_data.csv.gz?raw=true\""
    ]
   },
   {
@@ -357,7 +358,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2916 rows × 1458 columns</p>\n",
+       "<p>2916 rows × 1450 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -452,7 +453,7 @@
        "2914              -2.037700               0.667556               2.438798  \n",
        "2915              -0.574826               1.004447               1.320133  \n",
        "\n",
-       "[2916 rows x 1458 columns]"
+       "[2916 rows x 1450 columns]"
       ]
      },
      "execution_count": 3,
@@ -543,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
