rerun evaluate module

--- a/3.evaluate_model/get_model_predictions.ipynb
+++ b/3.evaluate_model/get_model_predictions.ipynb
@@ -228,7 +228,7 @@
        "      <th>17167</th>\n",
        "      <td>9afa05fd-b8f8-4c3b-8542-74bd89cacb08</td>\n",
        "      <td>Hole</td>\n",
-       "      <td>Polylobed</td>\n",
+       "      <td>Prometaphase</td>\n",
        "      <td>test</td>\n",
        "      <td>True</td>\n",
        "      <td>DP</td>\n",
@@ -237,7 +237,7 @@
        "      <th>17168</th>\n",
        "      <td>7526cf67-9cba-489e-9d4c-b2c1b6c900b3</td>\n",
        "      <td>ADCCM</td>\n",
-       "      <td>Binuclear</td>\n",
+       "      <td>MetaphaseAlignment</td>\n",
        "      <td>test</td>\n",
        "      <td>True</td>\n",
        "      <td>DP</td>\n",
@@ -246,7 +246,7 @@
        "      <th>17169</th>\n",
        "      <td>2ae329f7-6948-40da-93be-fd45ad4c6587</td>\n",
        "      <td>Interphase</td>\n",
-       "      <td>Large</td>\n",
+       "      <td>ADCCM</td>\n",
        "      <td>test</td>\n",
        "      <td>True</td>\n",
        "      <td>DP</td>\n",
@@ -255,7 +255,7 @@
        "      <th>17170</th>\n",
        "      <td>91e9f94c-8fd6-4bf6-916e-a470c8f0f16b</td>\n",
        "      <td>Prometaphase</td>\n",
-       "      <td>Interphase</td>\n",
+       "      <td>Polylobed</td>\n",
        "      <td>test</td>\n",
        "      <td>True</td>\n",
        "      <td>DP</td>\n",
@@ -295,10 +295,10 @@
        "3                Interphase      train     False           CP  \n",
        "4              Prometaphase      train     False           CP  \n",
        "...                     ...        ...       ...          ...  \n",
-       "17167             Polylobed       test      True           DP  \n",
-       "17168             Binuclear       test      True           DP  \n",
-       "17169                 Large       test      True           DP  \n",
-       "17170            Interphase       test      True           DP  \n",
+       "17167          Prometaphase       test      True           DP  \n",
+       "17168    MetaphaseAlignment       test      True           DP  \n",
+       "17169                 ADCCM       test      True           DP  \n",
+       "17170             Polylobed       test      True           DP  \n",
        "17171            Interphase       test      True           DP  \n",
        "\n",
        "[17172 rows x 6 columns]"
@@ -689,7 +689,7 @@
        "      <th>291920</th>\n",
        "      <td>30ed67c7-8de2-4d78-bce9-3fa1aff28565</td>\n",
        "      <td>OutOfFocus Negative</td>\n",
-       "      <td>OutOfFocus Negative</td>\n",
+       "      <td>OutOfFocus</td>\n",
        "      <td>test</td>\n",
        "      <td>True</td>\n",
        "      <td>CP_and_DP</td>\n",
@@ -698,7 +698,7 @@
        "      <th>291921</th>\n",
        "      <td>2960b13e-6090-4592-b2a9-d1c4c1b24b50</td>\n",
        "      <td>OutOfFocus Negative</td>\n",
-       "      <td>OutOfFocus</td>\n",
+       "      <td>OutOfFocus Negative</td>\n",
        "      <td>test</td>\n",
        "      <td>True</td>\n",
        "      <td>CP_and_DP</td>\n",
@@ -707,7 +707,7 @@
        "      <th>291922</th>\n",
        "      <td>fbc9ce6a-2b29-4115-b218-4ee5b8c50ac1</td>\n",
        "      <td>OutOfFocus</td>\n",
-       "      <td>OutOfFocus Negative</td>\n",
+       "      <td>OutOfFocus</td>\n",
        "      <td>test</td>\n",
        "      <td>True</td>\n",
        "      <td>CP_and_DP</td>\n",
@@ -748,9 +748,9 @@
        "4                      Large      train     False           CP  \n",
        "...                      ...        ...       ...          ...  \n",
        "291919            OutOfFocus       test      True    CP_and_DP  \n",
-       "291920   OutOfFocus Negative       test      True    CP_and_DP  \n",
-       "291921            OutOfFocus       test      True    CP_and_DP  \n",
-       "291922   OutOfFocus Negative       test      True    CP_and_DP  \n",
+       "291920            OutOfFocus       test      True    CP_and_DP  \n",
+       "291921   OutOfFocus Negative       test      True    CP_and_DP  \n",
+       "291922            OutOfFocus       test      True    CP_and_DP  \n",
        "291923   OutOfFocus Negative       test      True    CP_and_DP  \n",
        "\n",
        "[291924 rows x 6 columns]"
