--- a/3.evaluate_model/get_LOIO_probabilities.ipynb
+++ b/3.evaluate_model/get_LOIO_probabilities.ipynb
@@ -48,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2862, 1458)\n"
+      "(2862, 1450)\n"
      ]
     },
     {
@@ -218,7 +218,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 1458 columns</p>\n",
+       "<p>5 rows × 1450 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -271,7 +271,7 @@
        "3               0.643759              -1.906097               1.019370  \n",
        "4              -0.824945              -0.494285               1.763332  \n",
        "\n",
-       "[5 rows x 1458 columns]"
+       "[5 rows x 1450 columns]"
       ]
      },
      "execution_count": 2,
@@ -324,7 +324,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Performing LOIO for feature type CP with parameters C: 1.0, l1_ratio: 0.30000000000000004\n",
+      "Performing LOIO for feature type CP with parameters C: 10.0, l1_ratio: 0.2\n",
       "Performing LOIO for feature type CP_and_DP with parameters C: 0.1, l1_ratio: 0.30000000000000004\n",
       "Performing LOIO for feature type DP with parameters C: 1.0, l1_ratio: 1.0\n"
      ]
@@ -459,10 +459,10 @@
        "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
        "      <td>Interphase</td>\n",
        "      <td>CP</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.3</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>ADCCM</td>\n",
-       "      <td>6.642263e-06</td>\n",
+       "      <td>5.697936e-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -470,10 +470,10 @@
        "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
        "      <td>Interphase</td>\n",
        "      <td>CP</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.3</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>Anaphase</td>\n",
-       "      <td>1.594364e-01</td>\n",
+       "      <td>1.622146e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -481,10 +481,10 @@
        "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
        "      <td>Interphase</td>\n",
        "      <td>CP</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.3</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>Apoptosis</td>\n",
-       "      <td>8.103707e-01</td>\n",
+       "      <td>8.078470e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -492,10 +492,10 @@
        "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
        "      <td>Interphase</td>\n",
        "      <td>CP</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.3</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>Binuclear</td>\n",
-       "      <td>2.445957e-13</td>\n",
+       "      <td>1.129754e-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -503,10 +503,10 @@
        "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
        "      <td>Interphase</td>\n",
        "      <td>CP</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.3</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>Elongated</td>\n",
-       "      <td>1.855022e-07</td>\n",
+       "      <td>1.360021e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -594,11 +594,11 @@
        "128789  fffe7b67-9876-4ef0-9848-046506e8f238  LT0035_06/LT0035_06_274_21.tif   \n",
        "\n",
        "       Mitocheck_Phenotypic_Class Model_Feature_Type  Model_C  Model_l1_ratio  \\\n",
-       "0                      Interphase                 CP      1.0             0.3   \n",
-       "1                      Interphase                 CP      1.0             0.3   \n",
-       "2                      Interphase                 CP      1.0             0.3   \n",
-       "3                      Interphase                 CP      1.0             0.3   \n",
-       "4                      Interphase                 CP      1.0             0.3   \n",
+       "0                      Interphase                 CP     10.0             0.2   \n",
+       "1                      Interphase                 CP     10.0             0.2   \n",
+       "2                      Interphase                 CP     10.0             0.2   \n",
+       "3                      Interphase                 CP     10.0             0.2   \n",
+       "4                      Interphase                 CP     10.0             0.2   \n",
        "...                           ...                ...      ...             ...   \n",
        "128785               Prometaphase                 DP      1.0             1.0   \n",
        "128786               Prometaphase                 DP      1.0             1.0   \n",
@@ -607,11 +607,11 @@
        "128789               Prometaphase                 DP      1.0             1.0   \n",
        "\n",
        "       Model_Phenotypic_Class  Predicted_Probability  \n",
-       "0                       ADCCM           6.642263e-06  \n",
-       "1                    Anaphase           1.594364e-01  \n",
-       "2                   Apoptosis           8.103707e-01  \n",
-       "3                   Binuclear           2.445957e-13  \n",
-       "4                   Elongated           1.855022e-07  \n",
+       "0                       ADCCM           5.697936e-06  \n",
+       "1                    Anaphase           1.622146e-01  \n",
+       "2                   Apoptosis           8.078470e-01  \n",
+       "3                   Binuclear           1.129754e-13  \n",
+       "4                   Elongated           1.360021e-07  \n",
        "...                       ...                    ...  \n",
        "128785     MetaphaseAlignment           2.292677e-04  \n",
        "128786             OutOfFocus           8.108503e-07  \n",
@@ -677,20 +677,20 @@
      "output_type": "stream",
      "text": [
       "Performing LOIO on Large model for feature type CP with parameters C: 0.01, l1_ratio: 0.1\n",
-      "Performing LOIO on Prometaphase model for feature type CP with parameters C: 1.0, l1_ratio: 0.7000000000000001\n",
+      "Performing LOIO on Prometaphase model for feature type CP with parameters C: 1.0, l1_ratio: 0.5\n",
       "Performing LOIO on Grape model for feature type CP with parameters C: 0.01, l1_ratio: 0.0\n",
-      "Performing LOIO on Interphase model for feature type CP with parameters C: 1.0, l1_ratio: 0.0\n",
+      "Performing LOIO on Interphase model for feature type CP with parameters C: 1.0, l1_ratio: 0.6000000000000001\n",
       "Performing LOIO on Apoptosis model for feature type CP with parameters C: 0.01, l1_ratio: 0.1\n",
       "Performing LOIO on ADCCM model for feature type CP with parameters C: 0.01, l1_ratio: 0.2\n",
-      "Performing LOIO on SmallIrregular model for feature type CP with parameters C: 1.0, l1_ratio: 0.8\n",
+      "Performing LOIO on SmallIrregular model for feature type CP with parameters C: 1.0, l1_ratio: 0.2\n",
       "Performing LOIO on Polylobed model for feature type CP with parameters C: 0.1, l1_ratio: 0.6000000000000001\n",
       "Performing LOIO on Metaphase model for feature type CP with parameters C: 0.1, l1_ratio: 0.2\n",
       "Performing LOIO on Binuclear model for feature type CP with parameters C: 0.1, l1_ratio: 0.0\n",
       "Performing LOIO on Hole model for feature type CP with parameters C: 0.01, l1_ratio: 0.1\n",
-      "Performing LOIO on Anaphase model for feature type CP with parameters C: 0.01, l1_ratio: 0.0\n",
+      "Performing LOIO on Anaphase model for feature type CP with parameters C: 0.1, l1_ratio: 0.30000000000000004\n",
       "Performing LOIO on MetaphaseAlignment model for feature type CP with parameters C: 0.1, l1_ratio: 0.5\n",
       "Performing LOIO on Elongated model for feature type CP with parameters C: 0.1, l1_ratio: 0.1\n",
-      "Performing LOIO on OutOfFocus model for feature type CP with parameters C: 0.1, l1_ratio: 0.1\n",
+      "Performing LOIO on OutOfFocus model for feature type CP with parameters C: 0.01, l1_ratio: 0.30000000000000004\n",
       "Performing LOIO on Large model for feature type DP with parameters C: 0.1, l1_ratio: 0.8\n",
       "Performing LOIO on Prometaphase model for feature type DP with parameters C: 0.01, l1_ratio: 0.0\n",
       "Performing LOIO on Grape model for feature type DP with parameters C: 0.01, l1_ratio: 0.2\n",
@@ -706,17 +706,17 @@
       "Performing LOIO on MetaphaseAlignment model for feature type DP with parameters C: 0.01, l1_ratio: 0.30000000000000004\n",
       "Performing LOIO on Elongated model for feature type DP with parameters C: 0.1, l1_ratio: 0.30000000000000004\n",
       "Performing LOIO on OutOfFocus model for feature type DP with parameters C: 0.01, l1_ratio: 0.30000000000000004\n",
-      "Performing LOIO on Large model for feature type CP_and_DP with parameters C: 0.1, l1_ratio: 0.0\n",
+      "Performing LOIO on Large model for feature type CP_and_DP with parameters C: 1.0, l1_ratio: 0.1\n",
       "Performing LOIO on Prometaphase model for feature type CP_and_DP with parameters C: 0.1, l1_ratio: 0.5\n",
       "Performing LOIO on Grape model for feature type CP_and_DP with parameters C: 0.01, l1_ratio: 0.2\n",
       "Performing LOIO on Interphase model for feature type CP_and_DP with parameters C: 0.1, l1_ratio: 1.0\n",
       "Performing LOIO on Apoptosis model for feature type CP_and_DP with parameters C: 0.1, l1_ratio: 0.2\n",
-      "Performing LOIO on ADCCM model for feature type CP_and_DP with parameters C: 1.0, l1_ratio: 0.30000000000000004\n",
-      "Performing LOIO on SmallIrregular model for feature type CP_and_DP with parameters C: 0.01, l1_ratio: 0.0\n",
+      "Performing LOIO on ADCCM model for feature type CP_and_DP with parameters C: 0.01, l1_ratio: 0.0\n",
+      "Performing LOIO on SmallIrregular model for feature type CP_and_DP with parameters C: 1.0, l1_ratio: 0.8\n",
       "Performing LOIO on Polylobed model for feature type CP_and_DP with parameters C: 0.01, l1_ratio: 0.7000000000000001\n",
       "Performing LOIO on Metaphase model for feature type CP_and_DP with parameters C: 0.1, l1_ratio: 0.2\n",
-      "Performing LOIO on Binuclear model for feature type CP_and_DP with parameters C: 0.1, l1_ratio: 0.1\n",
-      "Performing LOIO on Hole model for feature type CP_and_DP with parameters C: 1.0, l1_ratio: 0.4\n",
+      "Performing LOIO on Binuclear model for feature type CP_and_DP with parameters C: 1.0, l1_ratio: 1.0\n",
+      "Performing LOIO on Hole model for feature type CP_and_DP with parameters C: 1.0, l1_ratio: 0.30000000000000004\n",
       "Performing LOIO on Anaphase model for feature type CP_and_DP with parameters C: 0.1, l1_ratio: 0.8\n",
       "Performing LOIO on MetaphaseAlignment model for feature type CP_and_DP with parameters C: 0.1, l1_ratio: 0.9\n",
       "Performing LOIO on Elongated model for feature type CP_and_DP with parameters C: 0.1, l1_ratio: 0.8\n",
@@ -877,7 +877,7 @@
        "      <td>0.2</td>\n",
        "      <td>ADCCM</td>\n",
        "      <td>Positive_Label</td>\n",
-       "      <td>0.367296</td>\n",
+       "      <td>0.366999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -897,11 +897,11 @@
        "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
        "      <td>Anaphase Negative</td>\n",
        "      <td>CP</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.3</td>\n",
        "      <td>Anaphase</td>\n",
        "      <td>Positive_Label</td>\n",
-       "      <td>0.949224</td>\n",
+       "      <td>0.922529</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -909,8 +909,8 @@
        "      <td>LT0109_38/LT0109_38_381_87.tif</td>\n",
        "      <td>Anaphase Negative</td>\n",
        "      <td>CP</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.3</td>\n",
        "      <td>Anaphase</td>\n",
        "      <td>OutOfFocus Negative</td>\n",
        "      <td>NaN</td>\n",
@@ -925,7 +925,7 @@
        "      <td>0.1</td>\n",
        "      <td>Apoptosis</td>\n",
        "      <td>Positive_Label</td>\n",
-       "      <td>0.959427</td>\n",
+       "      <td>0.959497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1021,8 +1021,8 @@
        "       Mitocheck_Phenotypic_Class Model_Feature_Type  Model_C  Model_l1_ratio  \\\n",
        "0                  ADCCM Negative                 CP     0.01             0.2   \n",
        "1                  ADCCM Negative                 CP     0.01             0.2   \n",
-       "2               Anaphase Negative                 CP     0.01             0.0   \n",
-       "3               Anaphase Negative                 CP     0.01             0.0   \n",
+       "2               Anaphase Negative                 CP     0.10             0.3   \n",
+       "3               Anaphase Negative                 CP     0.10             0.3   \n",
        "4              Apoptosis Negative                 CP     0.01             0.1   \n",
        "...                           ...                ...      ...             ...   \n",
        "257575         Polylobed Negative                 DP     0.10             0.4   \n",
@@ -1032,11 +1032,11 @@
        "257579    SmallIrregular Negative                 DP     0.01             0.2   \n",
        "\n",
        "       Model_Phenotypic_Class      Predicted_Label  Predicted_Probability  \n",
-       "0                       ADCCM       Positive_Label               0.367296  \n",
+       "0                       ADCCM       Positive_Label               0.366999  \n",
        "1                       ADCCM  OutOfFocus Negative                    NaN  \n",
-       "2                    Anaphase       Positive_Label               0.949224  \n",
+       "2                    Anaphase       Positive_Label               0.922529  \n",
        "3                    Anaphase  OutOfFocus Negative                    NaN  \n",
-       "4                   Apoptosis       Positive_Label               0.959427  \n",
+       "4                   Apoptosis       Positive_Label               0.959497  \n",
        "...                       ...                  ...                    ...  \n",
        "257575              Polylobed  OutOfFocus Negative                    NaN  \n",
        "257576           Prometaphase       Positive_Label               0.993936  \n",
