rerun download data

--- a/0.download_data/download_data.ipynb
+++ b/0.download_data/download_data.ipynb
@@ -30,9 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# labeled_data_hash = \"639e3db8e5b828f4f24f2d0817f94dafd6a7096e\"\n",
-    "# labeled_data_url = f\"https://raw.github.com/WayScience/mitocheck_data/{labeled_data_hash}/3.normalize_data/normalized_data/training_data.csv.gz\"\n",
-    "labeled_data_url = f\"https://github.com/roshankern/mitocheck_data/blob/remove-unused-cp-features/3.normalize_data/normalized_data/training_data.csv.gz?raw=true\""
+    "labeled_data_hash = \"20369033f579dca1334cb2c58a1c6d532322f93e\"\n",
+    "labeled_data_url = f\"https://raw.github.com/WayScience/mitocheck_data/{labeled_data_hash}/3.normalize_data/normalized_data/training_data.csv.gz\""
    ]
   },
   {
