--- a/5.validate_model/cell_health_validation.ipynb
+++ b/5.validate_model/cell_health_validation.ipynb
@@ -520,7 +520,12 @@
      "output_type": "stream",
      "text": [
       "Deriving multi-class model correlations...\n",
-      "Deriving correlations for final model with CP features...\n"
+      "Deriving correlations for final model with CP features...\n",
+      "Deriving correlations for shuffled_baseline model with CP_and_DP features...\n",
+      "Deriving correlations for final model with DP features...\n",
+      "Deriving correlations for shuffled_baseline model with DP features...\n",
+      "Deriving correlations for shuffled_baseline model with CP features...\n",
+      "Deriving correlations for final model with CP_and_DP features...\n"
      ]
     },
     {
@@ -620,9 +625,9 @@
        "      <td>HCC44</td>\n",
        "      <td>ccc</td>\n",
        "      <td>vb_ros_mean</td>\n",
-       "      <td>0.070058</td>\n",
+       "      <td>0.026201</td>\n",
        "      <td>final</td>\n",
-       "      <td>CP</td>\n",
+       "      <td>CP_and_DP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8396</th>\n",
@@ -630,9 +635,9 @@
        "      <td>HCC44</td>\n",
        "      <td>ccc</td>\n",
        "      <td>vb_ros_mean</td>\n",
-       "      <td>0.080660</td>\n",
+       "      <td>0.105229</td>\n",
        "      <td>final</td>\n",
-       "      <td>CP</td>\n",
+       "      <td>CP_and_DP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8397</th>\n",
@@ -640,9 +645,9 @@
        "      <td>HCC44</td>\n",
        "      <td>ccc</td>\n",
        "      <td>vb_ros_mean</td>\n",
-       "      <td>0.018994</td>\n",
+       "      <td>0.040965</td>\n",
        "      <td>final</td>\n",
-       "      <td>CP</td>\n",
+       "      <td>CP_and_DP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8398</th>\n",
@@ -650,9 +655,9 @@
        "      <td>HCC44</td>\n",
        "      <td>ccc</td>\n",
        "      <td>vb_ros_mean</td>\n",
-       "      <td>0.051520</td>\n",
+       "      <td>0.029666</td>\n",
        "      <td>final</td>\n",
-       "      <td>CP</td>\n",
+       "      <td>CP_and_DP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8399</th>\n",
@@ -660,13 +665,13 @@
        "      <td>HCC44</td>\n",
        "      <td>ccc</td>\n",
        "      <td>vb_ros_mean</td>\n",
-       "      <td>0.045181</td>\n",
+       "      <td>0.041012</td>\n",
        "      <td>final</td>\n",
-       "      <td>CP</td>\n",
+       "      <td>CP_and_DP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8400 rows × 7 columns</p>\n",
+       "<p>50400 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -690,13 +695,13 @@
        "3      -0.099941      final           CP  \n",
        "4       0.155004      final           CP  \n",
        "...          ...        ...          ...  \n",
-       "8395    0.070058      final           CP  \n",
-       "8396    0.080660      final           CP  \n",
-       "8397    0.018994      final           CP  \n",
-       "8398    0.051520      final           CP  \n",
-       "8399    0.045181      final           CP  \n",
+       "8395    0.026201      final    CP_and_DP  \n",
+       "8396    0.105229      final    CP_and_DP  \n",
+       "8397    0.040965      final    CP_and_DP  \n",
+       "8398    0.029666      final    CP_and_DP  \n",
+       "8399    0.041012      final    CP_and_DP  \n",
        "\n",
-       "[8400 rows x 7 columns]"
+       "[50400 rows x 7 columns]"
       ]
      },
      "execution_count": 4,
@@ -741,44 +746,6 @@
     "compiled_tidy_long_corrs = pd.concat(compiled_tidy_long_corrs)\n",
     "compiled_tidy_long_corrs.to_csv(f\"{tidy_long_corrs_save_dir}/compiled_correlations__MCM.tsv\", sep=\"\\t\")\n",
     "\n",
-    "print(\"Deriving single-class model correlations...\")\n",
-    "# list for compiling tidy long correlation data\n",
-    "compiled_tidy_long_corrs = []\n",
-    "for phenotypic_class_path in SCM_classification_profiles_save_dir.iterdir():\n",
-    "    for classification_profiles_path in phenotypic_class_path.iterdir():\n",
-    "        \n",
-    "        # get information about the current model\n",
-    "        phenotypic_class = phenotypic_class_path.name\n",
-    "        model_type = classification_profiles_path.name.split(\"__\")[0]\n",
-    "        feature_type = classification_profiles_path.name.split(\"__\")[1]\n",
-    "        \n",
-    "        print(f\"Deriving correlations for {model_type}, {phenotypic_class} model with {feature_type} features...\")\n",
-    "        \n",
-    "        # load classification profiles\n",
-    "        classification_profiles = pd.read_csv(classification_profiles_path, sep=\"\\t\")\n",
-    "        \n",
-    "        # combine cell health label profiles and classification profiles on perturbation and cell line\n",
-    "        final_profile_dataframe = pd.merge(\n",
-    "            cell_health_labels,\n",
-    "            classification_profiles,\n",
-    "            on=[\"Metadata_pert_name\", \"Metadata_cell_line\"],\n",
-    "        )\n",
-    "        \n",
-    "        # get tidy long correlations for this model's predictions\n",
-    "        model_tidy_long_corrs = validate_utils.get_tidy_long_corrs(final_profile_dataframe)\n",
-    "        \n",
-    "        # add model metadata\n",
-    "        model_tidy_long_corrs[\"model_type\"] = model_type\n",
-    "        model_tidy_long_corrs[\"feature_type\"] = feature_type\n",
-    "        \n",
-    "        # add correlations to compilation list\n",
-    "        compiled_tidy_long_corrs.append(model_tidy_long_corrs)\n",
-    "        \n",
-    "    \n",
-    "# compile and save tidy long data\n",
-    "compiled_tidy_long_corrs = pd.concat(compiled_tidy_long_corrs)\n",
-    "compiled_tidy_long_corrs.to_csv(f\"{tidy_long_corrs_save_dir}/compiled_correlations__SCM.tsv\", sep=\"\\t\")\n",
-    "\n",
     "# preview tidy data\n",
     "compiled_tidy_long_corrs"
    ]
@@ -800,8 +767,96 @@
      "output_type": "stream",
      "text": [
       "Deriving single-class model correlations...\n",
-      "/media/roshankern/63af2010-c376-459e-a56e-576b170133b6/data/cell-health-plate-classification-profiles/single_class_models/OutOfFocus\n",
-      "Deriving correlations for final, OutOfFocus model with CP features...\n"
+      "Deriving correlations for final, OutOfFocus model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, OutOfFocus model with CP_and_DP features...\n",
+      "Deriving correlations for final, OutOfFocus model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, OutOfFocus model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, OutOfFocus model with CP features...\n",
+      "Deriving correlations for final, OutOfFocus model with CP_and_DP features...\n",
+      "Deriving correlations for final, Apoptosis model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, Apoptosis model with CP_and_DP features...\n",
+      "Deriving correlations for final, Apoptosis model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Apoptosis model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Apoptosis model with CP features...\n",
+      "Deriving correlations for final, Apoptosis model with CP_and_DP features...\n",
+      "Deriving correlations for final, SmallIrregular model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, SmallIrregular model with CP_and_DP features...\n",
+      "Deriving correlations for final, SmallIrregular model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, SmallIrregular model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, SmallIrregular model with CP features...\n",
+      "Deriving correlations for final, SmallIrregular model with CP_and_DP features...\n",
+      "Deriving correlations for final, Hole model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, Hole model with CP_and_DP features...\n",
+      "Deriving correlations for final, Hole model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Hole model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Hole model with CP features...\n",
+      "Deriving correlations for final, Hole model with CP_and_DP features...\n",
+      "Deriving correlations for final, MetaphaseAlignment model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, MetaphaseAlignment model with CP_and_DP features...\n",
+      "Deriving correlations for final, MetaphaseAlignment model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, MetaphaseAlignment model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, MetaphaseAlignment model with CP features...\n",
+      "Deriving correlations for final, MetaphaseAlignment model with CP_and_DP features...\n",
+      "Deriving correlations for final, ADCCM model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, ADCCM model with CP_and_DP features...\n",
+      "Deriving correlations for final, ADCCM model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, ADCCM model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, ADCCM model with CP features...\n",
+      "Deriving correlations for final, ADCCM model with CP_and_DP features...\n",
+      "Deriving correlations for final, Binuclear model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, Binuclear model with CP_and_DP features...\n",
+      "Deriving correlations for final, Binuclear model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Binuclear model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Binuclear model with CP features...\n",
+      "Deriving correlations for final, Binuclear model with CP_and_DP features...\n",
+      "Deriving correlations for final, Anaphase model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, Anaphase model with CP_and_DP features...\n",
+      "Deriving correlations for final, Anaphase model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Anaphase model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Anaphase model with CP features...\n",
+      "Deriving correlations for final, Anaphase model with CP_and_DP features...\n",
+      "Deriving correlations for final, Polylobed model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, Polylobed model with CP_and_DP features...\n",
+      "Deriving correlations for final, Polylobed model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Polylobed model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Polylobed model with CP features...\n",
+      "Deriving correlations for final, Polylobed model with CP_and_DP features...\n",
+      "Deriving correlations for final, Grape model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, Grape model with CP_and_DP features...\n",
+      "Deriving correlations for final, Grape model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Grape model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Grape model with CP features...\n",
+      "Deriving correlations for final, Grape model with CP_and_DP features...\n",
+      "Deriving correlations for final, Interphase model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, Interphase model with CP_and_DP features...\n",
+      "Deriving correlations for final, Interphase model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Interphase model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Interphase model with CP features...\n",
+      "Deriving correlations for final, Interphase model with CP_and_DP features...\n",
+      "Deriving correlations for final, Prometaphase model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, Prometaphase model with CP_and_DP features...\n",
+      "Deriving correlations for final, Prometaphase model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Prometaphase model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Prometaphase model with CP features...\n",
+      "Deriving correlations for final, Prometaphase model with CP_and_DP features...\n",
+      "Deriving correlations for final, Large model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, Large model with CP_and_DP features...\n",
+      "Deriving correlations for final, Large model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Large model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Large model with CP features...\n",
+      "Deriving correlations for final, Large model with CP_and_DP features...\n",
+      "Deriving correlations for final, Metaphase model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, Metaphase model with CP_and_DP features...\n",
+      "Deriving correlations for final, Metaphase model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Metaphase model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Metaphase model with CP features...\n",
+      "Deriving correlations for final, Metaphase model with CP_and_DP features...\n",
+      "Deriving correlations for final, Elongated model with CP features...\n",
+      "Deriving correlations for shuffled_baseline, Elongated model with CP_and_DP features...\n",
+      "Deriving correlations for final, Elongated model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Elongated model with DP features...\n",
+      "Deriving correlations for shuffled_baseline, Elongated model with CP features...\n",
+      "Deriving correlations for final, Elongated model with CP_and_DP features...\n"
      ]
     },
     {
@@ -897,57 +952,57 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1115</th>\n",
-       "      <td>OutOfFocus Negative</td>\n",
+       "      <td>Elongated Negative</td>\n",
        "      <td>ES2</td>\n",
        "      <td>ccc</td>\n",
        "      <td>vb_ros_mean</td>\n",
-       "      <td>0.064430</td>\n",
+       "      <td>0.048834</td>\n",
        "      <td>final</td>\n",
-       "      <td>CP</td>\n",
+       "      <td>CP_and_DP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1116</th>\n",
-       "      <td>OutOfFocus</td>\n",
+       "      <td>Elongated</td>\n",
        "      <td>HCC44</td>\n",
        "      <td>pearson</td>\n",
        "      <td>vb_ros_mean</td>\n",
-       "      <td>0.077189</td>\n",
+       "      <td>-0.000785</td>\n",
        "      <td>final</td>\n",
-       "      <td>CP</td>\n",
+       "      <td>CP_and_DP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1117</th>\n",
-       "      <td>OutOfFocus Negative</td>\n",
+       "      <td>Elongated Negative</td>\n",
        "      <td>HCC44</td>\n",
        "      <td>pearson</td>\n",
        "      <td>vb_ros_mean</td>\n",
-       "      <td>-0.077189</td>\n",
+       "      <td>0.000785</td>\n",
        "      <td>final</td>\n",
-       "      <td>CP</td>\n",
+       "      <td>CP_and_DP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1118</th>\n",
-       "      <td>OutOfFocus</td>\n",
+       "      <td>Elongated</td>\n",
        "      <td>HCC44</td>\n",
        "      <td>ccc</td>\n",
        "      <td>vb_ros_mean</td>\n",
-       "      <td>0.085802</td>\n",
+       "      <td>0.027207</td>\n",
        "      <td>final</td>\n",
-       "      <td>CP</td>\n",
+       "      <td>CP_and_DP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1119</th>\n",
-       "      <td>OutOfFocus Negative</td>\n",
+       "      <td>Elongated Negative</td>\n",
        "      <td>HCC44</td>\n",
        "      <td>ccc</td>\n",
        "      <td>vb_ros_mean</td>\n",
-       "      <td>0.097801</td>\n",
+       "      <td>0.028280</td>\n",
        "      <td>final</td>\n",
-       "      <td>CP</td>\n",
+       "      <td>CP_and_DP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1120 rows × 7 columns</p>\n",
+       "<p>100800 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -958,11 +1013,11 @@
        "3     OutOfFocus Negative       all       ccc      cc_all_high_h2ax   \n",
        "4              OutOfFocus      A549   pearson      cc_all_high_h2ax   \n",
        "...                   ...       ...       ...                   ...   \n",
-       "1115  OutOfFocus Negative       ES2       ccc           vb_ros_mean   \n",
-       "1116           OutOfFocus     HCC44   pearson           vb_ros_mean   \n",
-       "1117  OutOfFocus Negative     HCC44   pearson           vb_ros_mean   \n",
-       "1118           OutOfFocus     HCC44       ccc           vb_ros_mean   \n",
-       "1119  OutOfFocus Negative     HCC44       ccc           vb_ros_mean   \n",
+       "1115   Elongated Negative       ES2       ccc           vb_ros_mean   \n",
+       "1116            Elongated     HCC44   pearson           vb_ros_mean   \n",
+       "1117   Elongated Negative     HCC44   pearson           vb_ros_mean   \n",
+       "1118            Elongated     HCC44       ccc           vb_ros_mean   \n",
+       "1119   Elongated Negative     HCC44       ccc           vb_ros_mean   \n",
        "\n",
        "      corr_value model_type feature_type  \n",
        "0       0.288700      final           CP  \n",
@@ -971,13 +1026,13 @@
        "3       0.032504      final           CP  \n",
        "4       0.273260      final           CP  \n",
        "...          ...        ...          ...  \n",
-       "1115    0.064430      final           CP  \n",
-       "1116    0.077189      final           CP  \n",
-       "1117   -0.077189      final           CP  \n",
-       "1118    0.085802      final           CP  \n",
-       "1119    0.097801      final           CP  \n",
+       "1115    0.048834      final    CP_and_DP  \n",
+       "1116   -0.000785      final    CP_and_DP  \n",
+       "1117    0.000785      final    CP_and_DP  \n",
+       "1118    0.027207      final    CP_and_DP  \n",
+       "1119    0.028280      final    CP_and_DP  \n",
        "\n",
-       "[1120 rows x 7 columns]"
+       "[100800 rows x 7 columns]"
       ]
      },
      "execution_count": 5,
