--- a/5.validate_model/cell_health_correlations.ipynb
+++ b/5.validate_model/cell_health_correlations.ipynb
@@ -24,14 +24,14 @@
     "from scipy.spatial.distance import squareform\n",
     "\n",
     "sys.path.append(\"../utils\")\n",
-    "import validate_utils"
+    "import validate_utils\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Set load/save paths"
+    "#### Set load/save paths\n"
    ]
   },
   {
@@ -53,7 +53,7 @@
     ")\n",
     "\n",
     "tidy_long_corrs_save_dir = pathlib.Path(\"validations\")\n",
-    "tidy_long_corrs_save_dir.mkdir(exist_ok=True, parents=True)"
+    "tidy_long_corrs_save_dir.mkdir(exist_ok=True, parents=True)\n"
    ]
   },
   {
@@ -500,7 +500,7 @@
     "cell_health_labels_link = f\"https://raw.github.com/broadinstitute/cell-health/{cell_health_hash}/1.generate-profiles/data/consensus/cell_health_median.tsv.gz\"\n",
     "\n",
     "cell_health_labels = pd.read_csv(cell_health_labels_link, compression=\"gzip\", sep=\"\\t\")\n",
-    "cell_health_labels\n"
+    "cell_health_labels"
    ]
   },
   {
@@ -714,37 +714,41 @@
     "# list for compiling tidy long correlation data\n",
     "compiled_tidy_long_corrs = []\n",
     "for classification_profiles_path in MCM_classification_profiles_save_dir.iterdir():\n",
-    "    \n",
+    "\n",
     "    # get information about the current model\n",
     "    model_type = classification_profiles_path.name.split(\"__\")[0]\n",
     "    feature_type = classification_profiles_path.name.split(\"__\")[1]\n",
-    "    \n",
-    "    print(f\"Deriving correlations for {model_type} model with {feature_type} features...\")\n",
-    "    \n",
+    "\n",
+    "    print(\n",
+    "        f\"Deriving correlations for {model_type} model with {feature_type} features...\"\n",
+    "    )\n",
+    "\n",
     "    # load classification profiles\n",
     "    classification_profiles = pd.read_csv(classification_profiles_path, sep=\"\\t\")\n",
-    "    \n",
+    "\n",
     "    # combine cell health label profiles and classification profiles on perturbation and cell line\n",
     "    final_profile_dataframe = pd.merge(\n",
     "        cell_health_labels,\n",
     "        classification_profiles,\n",
     "        on=[\"Metadata_pert_name\", \"Metadata_cell_line\"],\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # get tidy long correlations for this model's predictions\n",
     "    model_tidy_long_corrs = validate_utils.get_tidy_long_corrs(final_profile_dataframe)\n",
-    "    \n",
+    "\n",
     "    # add model metadata\n",
     "    model_tidy_long_corrs[\"model_type\"] = model_type\n",
     "    model_tidy_long_corrs[\"feature_type\"] = feature_type\n",
-    "    \n",
+    "\n",
     "    # add correlations to compilation list\n",
     "    compiled_tidy_long_corrs.append(model_tidy_long_corrs)\n",
-    "    \n",
+    "\n",
     "\n",
     "# compile and save tidy long data\n",
     "compiled_tidy_long_corrs = pd.concat(compiled_tidy_long_corrs)\n",
-    "compiled_tidy_long_corrs.to_csv(f\"{tidy_long_corrs_save_dir}/compiled_correlations__MCM.tsv\", sep=\"\\t\")\n",
+    "compiled_tidy_long_corrs.to_csv(\n",
+    "    f\"{tidy_long_corrs_save_dir}/compiled_correlations__MCM.tsv\", sep=\"\\t\"\n",
+    ")\n",
     "\n",
     "# preview tidy data\n",
     "compiled_tidy_long_corrs"
@@ -754,7 +758,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Derive classification profile and cell health label correlations (single-class models)"
+    "### Derive classification profile and cell health label correlations (single-class models)\n"
    ]
   },
   {
@@ -1046,38 +1050,44 @@
     "compiled_tidy_long_corrs = []\n",
     "for phenotypic_class_path in SCM_classification_profiles_save_dir.iterdir():\n",
     "    for classification_profiles_path in phenotypic_class_path.iterdir():\n",
-    "        \n",
+    "\n",
     "        # get information about the current model\n",
     "        phenotypic_class = phenotypic_class_path.name\n",
     "        model_type = classification_profiles_path.name.split(\"__\")[0]\n",
     "        feature_type = classification_profiles_path.name.split(\"__\")[1]\n",
-    "        \n",
-    "        print(f\"Deriving correlations for {model_type}, {phenotypic_class} model with {feature_type} features...\")\n",
-    "        \n",
+    "\n",
+    "        print(\n",
+    "            f\"Deriving correlations for {model_type}, {phenotypic_class} model with {feature_type} features...\"\n",
+    "        )\n",
+    "\n",
     "        # load classification profiles\n",
     "        classification_profiles = pd.read_csv(classification_profiles_path, sep=\"\\t\")\n",
-    "        \n",
+    "\n",
     "        # combine cell health label profiles and classification profiles on perturbation and cell line\n",
     "        final_profile_dataframe = pd.merge(\n",
     "            cell_health_labels,\n",
     "            classification_profiles,\n",
     "            on=[\"Metadata_pert_name\", \"Metadata_cell_line\"],\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        # get tidy long correlations for this model's predictions\n",
-    "        model_tidy_long_corrs = validate_utils.get_tidy_long_corrs(final_profile_dataframe)\n",
-    "        \n",
+    "        model_tidy_long_corrs = validate_utils.get_tidy_long_corrs(\n",
+    "            final_profile_dataframe\n",
+    "        )\n",
+    "\n",
     "        # add model metadata\n",
     "        model_tidy_long_corrs[\"model_type\"] = model_type\n",
     "        model_tidy_long_corrs[\"feature_type\"] = feature_type\n",
-    "        \n",
+    "\n",
     "        # add correlations to compilation list\n",
     "        compiled_tidy_long_corrs.append(model_tidy_long_corrs)\n",
-    "        \n",
-    "    \n",
+    "\n",
+    "\n",
     "# compile and save tidy long data\n",
     "compiled_tidy_long_corrs = pd.concat(compiled_tidy_long_corrs)\n",
-    "compiled_tidy_long_corrs.to_csv(f\"{tidy_long_corrs_save_dir}/compiled_correlations__SCM.tsv\", sep=\"\\t\")\n",
+    "compiled_tidy_long_corrs.to_csv(\n",
+    "    f\"{tidy_long_corrs_save_dir}/compiled_correlations__SCM.tsv\", sep=\"\\t\"\n",
+    ")\n",
     "\n",
     "# preview tidy data\n",
     "compiled_tidy_long_corrs"
