--- a/5.validate_model/cell_health_correlations.ipynb
+++ b/5.validate_model/cell_health_correlations.ipynb
@@ -746,6 +746,7 @@
     "\n",
     "# compile and save tidy long data\n",
     "compiled_tidy_long_corrs = pd.concat(compiled_tidy_long_corrs)\n",
+    "compiled_tidy_long_corrs = compiled_tidy_long_corrs.reset_index(drop=True)\n",
     "compiled_tidy_long_corrs.to_csv(\n",
     "    f\"{tidy_long_corrs_save_dir}/compiled_correlations__MCM.tsv\", sep=\"\\t\"\n",
     ")\n",
@@ -1085,6 +1086,7 @@
     "\n",
     "# compile and save tidy long data\n",
     "compiled_tidy_long_corrs = pd.concat(compiled_tidy_long_corrs)\n",
+    "compiled_tidy_long_corrs = compiled_tidy_long_corrs.reset_index(drop=True)\n",
     "compiled_tidy_long_corrs.to_csv(\n",
     "    f\"{tidy_long_corrs_save_dir}/compiled_correlations__SCM.tsv\", sep=\"\\t\"\n",
     ")\n",
