docs, black formatting

--- a/5.validate_model/view_cell_health_correlations.ipynb
+++ b/5.validate_model/view_cell_health_correlations.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import libraries"
+    "### Import libraries\n"
    ]
   },
   {
@@ -18,14 +18,14 @@
     "import pandas as pd\n",
     "\n",
     "sys.path.append(\"../utils\")\n",
-    "import validate_utils"
+    "import validate_utils\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Examine multi-class model correlations"
+    "### Examine multi-class model correlations\n"
    ]
   },
   {
@@ -216,9 +216,7 @@
    ],
    "source": [
     "tidy_long_corrs_save_dir = pathlib.Path(\"validations\")\n",
-    "corrs_path = pathlib.Path(\n",
-    "    f\"{tidy_long_corrs_save_dir}/compiled_correlations__MCM.tsv\"\n",
-    ")\n",
+    "corrs_path = pathlib.Path(f\"{tidy_long_corrs_save_dir}/compiled_correlations__MCM.tsv\")\n",
     "\n",
     "tidy_corr_data = pd.read_csv(corrs_path, sep=\"\\t\", index_col=0)\n",
     "tidy_corr_data"
@@ -241,12 +239,14 @@
     }
    ],
    "source": [
-    "cell_line = \"all\" # all, A549, ES2, HCC44\n",
-    "corr_type = \"pearson\" # pearson, ccc\n",
-    "model_type = \"final\" # final, shuffled baseline\n",
-    "feature_type = \"CP_and_DP\" # CP, DP, CP_and_DP\n",
+    "cell_line = \"all\"  # all, A549, ES2, HCC44\n",
+    "corr_type = \"pearson\"  # pearson, ccc\n",
+    "model_type = \"final\"  # final, shuffled baseline\n",
+    "feature_type = \"CP_and_DP\"  # CP, DP, CP_and_DP\n",
     "\n",
-    "validate_utils.get_corr_clustermap(tidy_corr_data, cell_line, corr_type, model_type, feature_type)"
+    "validate_utils.get_corr_clustermap(\n",
+    "    tidy_corr_data, cell_line, corr_type, model_type, feature_type\n",
+    ")"
    ]
   },
   {
@@ -266,19 +266,21 @@
     }
    ],
    "source": [
-    "cell_line = \"all\" # all, A549, ES2, HCC44\n",
-    "corr_type = \"pearson\" # pearson, ccc\n",
-    "model_type = \"shuffled_baseline\" # final, shuffled_baseline\n",
-    "feature_type = \"CP_and_DP\" # CP, DP, CP_and_DP\n",
+    "cell_line = \"all\"  # all, A549, ES2, HCC44\n",
+    "corr_type = \"pearson\"  # pearson, ccc\n",
+    "model_type = \"shuffled_baseline\"  # final, shuffled_baseline\n",
+    "feature_type = \"CP_and_DP\"  # CP, DP, CP_and_DP\n",
     "\n",
-    "validate_utils.get_corr_clustermap(tidy_corr_data, cell_line, corr_type, model_type, feature_type)"
+    "validate_utils.get_corr_clustermap(\n",
+    "    tidy_corr_data, cell_line, corr_type, model_type, feature_type\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Examine single-class model correlations"
+    "### Examine single-class model correlations\n"
    ]
   },
   {
@@ -468,9 +470,7 @@
     }
    ],
    "source": [
-    "corrs_path = pathlib.Path(\n",
-    "    f\"{tidy_long_corrs_save_dir}/compiled_correlations__SCM.tsv\"\n",
-    ")\n",
+    "corrs_path = pathlib.Path(f\"{tidy_long_corrs_save_dir}/compiled_correlations__SCM.tsv\")\n",
     "\n",
     "tidy_corr_data = pd.read_csv(corrs_path, sep=\"\\t\", index_col=0)\n",
     "tidy_corr_data"
@@ -493,12 +493,14 @@
     }
    ],
    "source": [
-    "cell_line = \"all\" # all, A549, ES2, HCC44\n",
-    "corr_type = \"pearson\" # pearson, ccc\n",
-    "model_type = \"final\" # final, shuffled baseline\n",
-    "feature_type = \"CP_and_DP\" # CP, DP, CP_and_DP\n",
+    "cell_line = \"all\"  # all, A549, ES2, HCC44\n",
+    "corr_type = \"pearson\"  # pearson, ccc\n",
+    "model_type = \"final\"  # final, shuffled baseline\n",
+    "feature_type = \"CP_and_DP\"  # CP, DP, CP_and_DP\n",
     "\n",
-    "validate_utils.get_corr_clustermap(tidy_corr_data, cell_line, corr_type, model_type, feature_type)"
+    "validate_utils.get_corr_clustermap(\n",
+    "    tidy_corr_data, cell_line, corr_type, model_type, feature_type\n",
+    ")"
    ]
   },
   {
@@ -518,12 +520,14 @@
     }
    ],
    "source": [
-    "cell_line = \"all\" # all, A549, ES2, HCC44\n",
-    "corr_type = \"pearson\" # pearson, ccc\n",
-    "model_type = \"shuffled_baseline\" # final, shuffled_baseline\n",
-    "feature_type = \"CP_and_DP\" # CP, DP, CP_and_DP\n",
+    "cell_line = \"all\"  # all, A549, ES2, HCC44\n",
+    "corr_type = \"pearson\"  # pearson, ccc\n",
+    "model_type = \"shuffled_baseline\"  # final, shuffled_baseline\n",
+    "feature_type = \"CP_and_DP\"  # CP, DP, CP_and_DP\n",
     "\n",
-    "validate_utils.get_corr_clustermap(tidy_corr_data, cell_line, corr_type, model_type, feature_type)"
+    "validate_utils.get_corr_clustermap(\n",
+    "    tidy_corr_data, cell_line, corr_type, model_type, feature_type\n",
+    ")"
    ]
   }
  ],
